--- a/build.gradle
+++ b/build.gradle
@@ -6,16 +6,14 @@ buildscript {
         google()
         jcenter()
         maven() {
-            url "https://oss.sonatype.org/content/repositories/snapshots"
+           url "https://oss.sonatype.org/content/repositories/snapshots"
         }
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
+
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
-        
+        classpath 'com.android.tools.build:gradle:3.3.2'
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -25,14 +23,24 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
+        /*google()
         jcenter()
         maven {
             url 'https://www.jitpack.io'
+
         }
         maven {
             url 'https://maven.google.com/'
             name 'Google'
+        }*/
+
+        jcenter()
+        google()
+        mavenCentral()
+        maven { url "https://jitpack.io" }
+        maven { url 'https://plugins.gradle.org/m2/'}
+        maven {
+            url "https://maven.google.com"
         }
     }
 
